# mpdevil

./: constants.py.in  meson.build  pyproject.toml
data/: AboutDialog.ui
src/mpdevil/: decorators.py  mpd_client_wrapper.py  mpris_interface.py
src/mpdevil/gui/: mpda_action_group.py  mpdevil.py
src/mpdevil/gui/main_window/: __init__.py  audio_format.py  auto_sized_icon.py  connection_notify.py  cover_lyrics_window.py  main_window.py  playback_control.py  playback_options.py  playlist_window.py  search_window.py  seek_bar.py  server_stats.py  song_popover.py  songs_window.py  tree_view.py  update_notify.py  volume_button.py
src/mpdevil/gui/main_window/browser/: __init__.py  album_list.py  album_popover.py  artist_list.py  browser.py  genre_list.py  selection_list.py
src/mpdevil/gui/main_window/settings_dialog/: __init__.py  settings_dialog.py  settings_tabs.py  util.py
