[tool.poetry]
name = "mpdevil"
version = "1.6.0"
description = "A simple music browser for MPD"
authors = ["Simon Rose <mail@popkornium18.de>"]
license = "todo"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
python-mpd2 = ">=1.1"
PyGObject = "^3.42.0"

[tool.poetry.dev-dependencies]
PyGObject-stubs = "^0.0.7"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
